Fixed white space at bottom issue and changed every item to border-box

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,15 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box
 }
 
-html,
-body {
-    width: 100%;
+
+html {
     height: 100%;
-    margin: 0px;
-    padding: 0px;
+    overflow: auto;
 }
 
 body {
-    overflow-x: hidden;
-    min-height: 100%
+    height: 100vh;
 }
